[package]
name = "view3d"
version = "0.1.0"
authors = ["Jake O'Shannessy <joshannessy@gmail.com>"]
build = "build.rs"

[[bin]]
name = "view3d"
path = "src/view3d.rs"

[[bin]]
name = "view2d"
path = "src/view2d.rs"

[lib]
name = "viewlib"
path = "src/viewlib.rs"

[dependencies]
clap = "~2.32.0"
time = "0.1"
libc = "0.2.0"

[build-dependencies]
cc = "1.0"
