[package]
name = "view3d"
version = "0.1.1"
authors = ["Jake O'Shannessy <joshannessy@gmail.com>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "view3d"
path = "src/bin/view3d.rs"

[[bin]]
name = "view2d"
path = "src/bin/view2d.rs"

[lib]
name = "view3d"
path = "src/lib.rs"

[dependencies]
clap = "~2.32.0"
time = "0.1"
libc = "0.2.0"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
quickcheck = "0.8.0"
assert_cmd = "0.10.2"
